[project]
name = "automation-tools"
version = "0.1.0"
description = "Un ensemble d'outils personnel pour automatiser des tâches"
authors = [{ name = "Raphael Lossec", email = "raphaelossec@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nbconvert>=7.2",
    "nbformat>=5.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src.file_conversion"]
